--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
-
 {
   "name": "react",
   "version": "1.0.0",
   "description": "React Learning",
-  "main": "App.js",
   "scripts": {
     "test": "jest"
   },
@@ -15,5 +13,9 @@
   "license": "ISC",
   "devDependencies": {
     "parcel": "^2.14.4"
+  },
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
